--- a/.github/workflows/AdityaRDP.yml
+++ b/.github/workflows/AdityaRDP.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Connect Ke Akun Ngrok.
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        NGROK_AUTH_TOKEN: ${{ secrets.ntEtbcXjLkwoeMF6LDjP_7z2Rmg4obQAKBZi9Ac2Au }}
     - name: Mengaktifkan Akses RDP.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
